plugins {
  id 'org.springframework.boot' version '3.0.1'
  id 'io.spring.dependency-management' version '1.1.0'
  id 'application'
  id 'groovy'
}

group 'com.kontomatik'
version '1.0-SNAPSHOT'
sourceCompatibility = "17.PREVIEW"

repositories {
  mavenCentral()
}

dependencies {
  implementation(project(':lib')) {
    exclude group: 'org.slf4j', module: 'slf4j-simple'
  }
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
  implementation 'com.google.code.gson:gson:2.10.1'

  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation platform('org.apache.groovy:groovy-bom:4.0.5')
  testImplementation 'org.apache.groovy:groovy'
  testImplementation 'org.apache.groovy:groovy-json'
  testImplementation platform('org.spockframework:spock-bom:2.3-groovy-4.0')
  testImplementation 'org.spockframework:spock-core'
  testImplementation 'org.spockframework:spock-spring'
  testImplementation 'org.testcontainers:mongodb:1.17.6'
}

test {
  useJUnitPlatform()
  jvmArgs(['--enable-preview'])
}

tasks.withType(JavaCompile).each {
  it.options.compilerArgs.add('--enable-preview')
}

application {
  mainClass = 'com.kontomatik.service.SpringApp'
}
